--- a/public/views/maps.html
+++ b/public/views/maps.html
@@ -1,4 +1,4 @@
 <p>There is nothing here...yet.</p>
 <p>Soon there will be lots and lots of cool mappy things, though.</p>
 <p>In the meantime, here is a pretty flower.</p>
-<img src="img/prettyflower.jpg" />
+<img src="img/prettyflower.jpeg" />
