some back end changes, and maps page responds to category selection

--- a/public/views/maps.html
+++ b/public/views/maps.html
@@ -1,4 +1,16 @@
-<p>There is nothing here...yet.</p>
-<p>Soon there will be lots and lots of cool mappy things, though.</p>
-<p>In the meantime, here is a pretty flower.</p>
-<img src="img/prettyflower.jpeg" />
+<!-- maps.html -->
+<!-- embedded map and list of resources wil go here -->
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm-8">    <!-- map goes here -->
+            <img src="img/prettyflower.jpeg" />
+        </div>
+
+        <div class="col-sm-4">    <!-- list goes here -->
+            <p>{{getCatMessage();}}</p>
+            <p>This will be a list of resources in the selected category</p>
+            <p>The resources will be displayed on a map in the place of the image to the left.</p>
+        </div>
+    </div>
+</div>
