--- a/public/views/index.html
+++ b/public/views/index.html
@@ -35,10 +35,10 @@
 					<a class="navbar-brand" href="/">PinkPages</a>
 				</div>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="/">Home</a></li>
-					<li><a href="/maps">Maps</a></li>
+					<li><a href="/"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a></li>
+					<li><a href="/maps"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span></a></li>
 					<li class="dropdown">
-					    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Categories</a>
+					    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></a>
 					        <ul class="dropdown-menu">
                                 <li ng-repeat="cat in cats">{{cat.name}}</li>
 					        </ul>
@@ -53,7 +53,7 @@
 
 		<div class="emergency">
 			<!-- should stick to bottom of page for emergency resource access -->
-			<a href="/emergency">Click here if you are in need of emergency resources.</a>
+			<a href="/emergency">Click here if you are in need of emergency resources</a>
 		</div>
 	</body>
 </html>
