resources display in list on maps screen

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -21,6 +21,7 @@
     <script src="js/controllers/MainCtrl.js"></script>
     <script src="js/controllers/MapsCtrl.js"></script>
     <script src="js/services/CategoryService.js"></script>
+    <script src="js/services/ResourceService.js"></script>
     <script src="js/services/DataService.js"></script>
     <script src="js/appRoutes.js"></script>
     <script src="js/pinkcontrol.js"></script>
