the gays update

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,3 +10,13 @@
 	bottom: 0;
 	padding: 10px;
 }
+
+.customStyle{
+	background-color: #F6E0ED;
+	font-family: 'Roboto', sans-serif;
+	font-size: 16px;
+}
+
+.customNav{
+	
+}
