--- a/public/views/emergency.html
+++ b/public/views/emergency.html
@@ -14,7 +14,7 @@
 				</ul>	
 		</div>
 		<div class="col-sm-4">
-			<img class="img-responsive" src="img/rainbow.jpg" />
+			<img class="img-responsive" src="img/cross.jpg" />
 		</div>
 	</div>
 </div>
