--- a/public/views/index.html
+++ b/public/views/index.html
@@ -9,7 +9,8 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> <!-- custom styles -->
 
     <!-- JS -->
     <script src="libs/angular/angular.min.js"></script>
@@ -27,11 +28,11 @@
     <script src="js/pinkcontrol.js"></script>
 </head>
 
-	<body ng-app="pinkpages" ng-controller="MainController">
+	<body ng-app="pinkpages" ng-controller="MainController" class="customStyle">
 		<!-- Angular views for this, they can link to pages that change the view -->
 		<!-- Navigation bar links should actually be photos -->
 		<!-- Button for resources should not be a view, it should open a menu on hover -->
-		<nav class="navbar navbar-default">
+		<nav class="navbar navbar-default customNav">
 			<div class="container-fluid">
 				<div class="navbar-header">
 					<a class="navbar-brand" href="/">PinkPages</a>
@@ -57,7 +58,7 @@
 
 		<div class="emergency">
 			<!-- should stick to bottom of page for emergency resource access -->
-			<a href="/emergency">Click here if you are in need of emergency resources</a>
+			<a href="/emergency">Click here for emergency resources</a>
 		</div>
 	</body>
 </html>
