basic map added

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -25,6 +25,7 @@
     <script src="js/services/DataService.js"></script>
     <script src="js/appRoutes.js"></script>
     <script src="js/pinkcontrol.js"></script>
+
 </head>
 
 	<body ng-app="pinkpages" ng-controller="MainController">
@@ -59,5 +60,9 @@
 			<!-- should stick to bottom of page for emergency resource access -->
 			<a href="/emergency">Click here if you are in need of emergency resources.</a>
 		</div>
+
+		<!-- Load Google Maps JavaScript API -->
+		<!--
+		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAhykCKZ1VG30WWiP06Sdp_cAyfIXZJvy0&callback=mapsReady"></script> -->
 	</body>
 </html>
