--- a/public/views/maps.html
+++ b/public/views/maps.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-8">    <!-- map goes here -->
-            <img src="img/prettyflower.jpeg" />
+            <div id="map"></div>
         </div>
 
         <div class="col-sm-4">    <!-- list goes here -->
