kc first commit

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -56,12 +56,11 @@
 		<div ng-view class="content">
 			<!-- The Angular dynamically routed content goes here -->
 		</div>
-
-		<div class="emergency">
-			<!-- should stick to bottom of page for emergency resource access -->
-			<a href="/emergency">Click here for emergency resources</a>
-		</div>
-
+		<footer class="footer">
+      		<div class="container">
+        		<p class="text-muted"><a href="/emergency">Click here for emergency resources</a></p>
+      		</div>
+    	</footer>
 		<!-- Load Google Maps JavaScript API -->
 		<!--
 		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAhykCKZ1VG30WWiP06Sdp_cAyfIXZJvy0&callback=mapsReady"></script> -->
