--- a/public/views/emergency.html
+++ b/public/views/emergency.html
@@ -1,20 +1,58 @@
+<!-- Main jumbotron for a primary marketing message or call to action -->
+<div class="jumbotron">
+  <div class="container">
+    <h2><b>In need of emergency help?</b></h2>
+    <p>If you are in need of immediate medical attention dial 911 immediately. <br> The list below isn't a comprehensive list of emergency services. These are some services The Pink Pages believes are catered to the LGBT* community.  </p>
+  </div>
+</div>
+
 <div class="container">
-	<div class="row">
-		<div class="col-sm-8">
-			Emergency Resources<br>
-				<ul>
-	                	<li ng-repeat="cat in cats">{{cat.name}}</li>
-	                	<li ng-repeat="cat in cats">{{cat.address}}</li>
-				</ul>
-				<ul>
-					<li>If you're need of immediate medical attention call 911</li>
-					<li>National Suicide Prevention Lifeline: 1-800-273-8255</li>
-					<li>Re:Solve Crisis Center: 1-888-796-8226</li>
-					<li>Pittsburgh Action Against Rape (PAAR): 1-866-363-7273</li>
-				</ul>	
+  <!-- Example row of columns -->
+  	<div class="row">
+	    <div class="col-md-4">
+	    	<div class="panel panel-default">
+	      		<div class="panel-heading"><h2>National Suicide Prevention Lifeline</h2>
+	      		</div>
+	      		<div class="panel-body"><p><b>800-273-TALK (8255)</b><br>The Lifeline provides 24/7, free and confidential support for people in distress, prevention and crisis resources for you or your loved ones, and best practices for professionals.</p>
+	      		<p><a class="btn btn-secondary" href="http://chat.suicidepreventionlifeline.org/GetHelp/LifelineChat.aspx" role="button">Online Chat &raquo;</a></p>
+	    		</div>
+	    	</div>
 		</div>
-		<div class="col-sm-4">
-			<img class="img-responsive" src="img/cross.jpg" />
-		</div>
+
+	    <div class="col-md-4">
+	    	<div class="panel panel-default">
+	      		<div class="panel-heading">
+	      			<h2>re:solve Crisis Network</h2>
+	      		</div>
+	      		<div class="panel-body">
+	      			<p><b>1-888-7YOU CAN (1-888-796-8226)</b><br>333 North Braddock Ave.<br>Pittsburgh PA 15208<br>Comprehensive crisis services for Allegheny County residents, regardless of age or ability to pay. Services designed to meet your needs and preferences include:</p>
+				    <ul>
+				        <li>confidential telephone conseling</li>
+				        <li>mobile crisis teams that travel anywhere in Allegheny County</li>
+				        <li>walk-in assistance, no apppointment needed</li>
+				        <li>overnight/crisis residential (up to 72 hours)</li>
+				    </ul>
+	      			<p><a class="btn btn-secondary" href="http://www.upmc.com/Services/behavioral-health/Pages/resolve-crisis-network.aspx" role="button">re:solve homepage &raquo;</a></p>
+	   			</div>
+	   		</div>
+	   </div>
+
+	    <div class="col-md-4">
+	    	<div class="panel panel-default">
+	      		<div class="panel-heading">
+	      			<h2>re:solve Crisis Network</h2>
+	      		</div>
+	      		<div class="panel-body">
+	      			<p><b>1-888-7YOU CAN (1-888-796-8226)</b><br>333 North Braddock Ave.<br>Pittsburgh PA 15208<br>Comprehensive crisis services for Allegheny County residents, regardless of age or ability to pay. Services designed to meet your needs and preferences include:</p>
+			        <ul>
+			          	<li>confidential telephone conseling</li>
+			          	<li>mobile crisis teams that travel anywhere in Allegheny County</li>
+			          	<li>walk-in assistance, no apppointment needed</li>
+			          	<li>overnight/crisis residential (up to 72 hours)</li>
+			        </ul>
+	      			<p><a class="btn btn-secondary" href="http://www.upmc.com/Services/behavioral-health/Pages/resolve-crisis-network.aspx" role="button">re:solve homepage &raquo;</a></p>
+	   			</div>
+	   		</div>
+   		</div>	
 	</div>
 </div>
