--- a/public/views/emergency.html
+++ b/public/views/emergency.html
@@ -11,10 +11,12 @@
   	<div class="row">
 	    <div class="col-md-4">
 	    	<div class="panel panel-default">
-	      		<div class="panel-heading"><h2>National Suicide Prevention Lifeline</h2>
+	      		<div class="panel-heading">
+	      		<h2>National Suicide Prevention Lifeline</h2>
 	      		</div>
-	      		<div class="panel-body"><p><b>800-273-TALK (8255)</b><br>The Lifeline provides 24/7, free and confidential support for people in distress, prevention and crisis resources for you or your loved ones, and best practices for professionals.</p>
-	      		<p><a class="btn btn-secondary" href="http://chat.suicidepreventionlifeline.org/GetHelp/LifelineChat.aspx" role="button">Online Chat &raquo;</a></p>
+	      		<div class="panel-body">
+	      			<p><b>800-273-TALK (8255)<br><a class="btn btn-secondary" href="http://chat.suicidepreventionlifeline.org/GetHelp/LifelineChat.aspx" role="button">Online Chat</a></b><br>The Lifeline provides 24/7, free and confidential support for people in distress, prevention and crisis resources for you or your loved ones, and best practices for professionals.</p>
+	      			<p><a class="btn btn-secondary" href="https://suicidepreventionlifeline.org/" role="button">National Suicide Prevention Lifeline &raquo;</a></p>
 	    		</div>
 	    	</div>
 		</div>
@@ -25,14 +27,14 @@
 	      			<h2>re:solve Crisis Network</h2>
 	      		</div>
 	      		<div class="panel-body">
-	      			<p><b>1-888-7YOU CAN (1-888-796-8226)</b><br>333 North Braddock Ave.<br>Pittsburgh PA 15208<br>Comprehensive crisis services for Allegheny County residents, regardless of age or ability to pay. Services designed to meet your needs and preferences include:</p>
+	      			<p><b>1-888-7YOU CAN (1-888-796-8226)</b><br><i>333 North Braddock Ave.<br>Pittsburgh PA 15208</i><br>Comprehensive crisis services for Allegheny County residents, regardless of age or ability to pay. Services designed to meet your needs and preferences include:</p>
 				    <ul>
 				        <li>confidential telephone conseling</li>
 				        <li>mobile crisis teams that travel anywhere in Allegheny County</li>
 				        <li>walk-in assistance, no apppointment needed</li>
 				        <li>overnight/crisis residential (up to 72 hours)</li>
 				    </ul>
-	      			<p><a class="btn btn-secondary" href="http://www.upmc.com/Services/behavioral-health/Pages/resolve-crisis-network.aspx" role="button">re:solve homepage &raquo;</a></p>
+	      			<p><a class="btn btn-secondary" href="http://www.upmc.com/Services/behavioral-health/Pages/resolve-crisis-network.aspx" role="button">re:solve Crisis Network &raquo;</a></p>
 	   			</div>
 	   		</div>
 	   </div>
@@ -40,19 +42,43 @@
 	    <div class="col-md-4">
 	    	<div class="panel panel-default">
 	      		<div class="panel-heading">
-	      			<h2>re:solve Crisis Network</h2>
+	      			<h2>Pittsburgh Action Against Rape (PAAR)</h2>
 	      		</div>
 	      		<div class="panel-body">
-	      			<p><b>1-888-7YOU CAN (1-888-796-8226)</b><br>333 North Braddock Ave.<br>Pittsburgh PA 15208<br>Comprehensive crisis services for Allegheny County residents, regardless of age or ability to pay. Services designed to meet your needs and preferences include:</p>
-			        <ul>
-			          	<li>confidential telephone conseling</li>
-			          	<li>mobile crisis teams that travel anywhere in Allegheny County</li>
-			          	<li>walk-in assistance, no apppointment needed</li>
-			          	<li>overnight/crisis residential (up to 72 hours)</li>
-			        </ul>
-	      			<p><a class="btn btn-secondary" href="http://www.upmc.com/Services/behavioral-health/Pages/resolve-crisis-network.aspx" role="button">re:solve homepage &raquo;</a></p>
+	      			<p><b>1-866-END-RAPE (1-866-363-7273)</b><br><i>81 S. 19th Street<br>Pittsburgh PA 15203</i><br>PAAR is a  group of lawyers, health professionals, and activists that believe victims of sexual assault should have expert assistance directly following the commission of the crime. PAAR is one of the oldest rape crisis centers in the U.S., and the only organization in Allegheny County solely devoted to the issue of sexual violence.
+	      			<p><a class="btn btn-secondary" href="http://paar.net/" role="button">PAAR &raquo;</a></p>
 	   			</div>
 	   		</div>
    		</div>	
+   	</div>
+   	<div class="row">	
+
+   		<div class="col-md-4">
+	    	<div class="panel panel-default">
+	      		<div class="panel-heading">
+	      			<h2>Crisis Text Line</h2>
+	      		</div>
+	      		<div class="panel-body">
+	      			<p><b>Text "HOME" to 741741</b><br>Crisis Text Line is free, 24/7 support for those in crisis. Text the hotline from anywhere in the USA to text with a trained Crisis Counselor. Their first priority is helping people move from a hot moment to a cool calm, guiding you to create a plan to stay safe and healthy. 
+	      			<p><a class="btn btn-secondary" href="http://www.crisistextline.org/" role="button">Crisis Text Line &raquo;</a></p>
+	   			</div>
+	   		</div>
+   		</div>
+
+   		<div class="col-md-4">
+	    	<div class="panel panel-default">
+	      		<div class="panel-heading">
+	      			<h2>Trevor Project</h2>
+	      		</div>
+	      		<div class="panel-body">
+	      			<p><b>Hotline 1-866-488-7386 <br>TextLine "TREVOR" to 1-202-304-1200<br><a class="btn btn-secondary" href="https://m2.icarol.com/ConsumerRegistration.aspx?org=2018&pid=47&cc=en-US" role="button">Trevor Online Chat</a></b><br>Crisis Text Line is free, 24/7 support for those in crisis. Text the hotline from anywhere in the USA to text with a trained Crisis Counselor. Their first priority is helping people move from a hot moment to a cool calm, guiding you to create a plan to stay safe and healthy. 
+	      			<p><a class="btn btn-secondary" href="http://www.thetrevorproject.org/" role="button">Trevor Project &raquo;</a></p>
+	   			</div>
+	   		</div>
+   		</div>
+
 	</div>
-</div>
+	<br>
+	<br>
+	<br>
+</div>-
