--- a/public/views/index.html
+++ b/public/views/index.html
@@ -56,10 +56,12 @@
 		<div ng-view class="content">
 			<!-- The Angular dynamically routed content goes here -->
 		</div>
-		<footer class="footer">
-      		<div class="container">
-        		<p class="text-muted"><a href="/emergency">Click here for emergency resources</a></p>
+      		<div class="navbar navbar-default navbar-fixed-bottom" style="background-color: #646D6D">
+      			<div class="container">
+      				<p style="text-align: center; padding-top: 10px">
+      					<a class="text-danger" href="/emergency">Click here for emergency resources</a>
+      					</p>
+      			</div>
       		</div>
-    	</footer>
 	</body>
 </html>
