--- a/public/views/main.html
+++ b/public/views/main.html
@@ -54,6 +54,6 @@
     
 	<div>
 			<p>The Pittsburgh Pink Pages is a resouce currated by the Pittsburgh Equalty Center. The Pink Pages allow access to a LGBT database of queer freindly establishments around the city. From therapist to bars The Pink Pages have anything that someone could be looking for in the LGBT community. </p>
-			<p>The Pittsburgh Equality Center provides gay, lesbian, bisexual and transgender (LGBT*) individuals, their families and supporters in Western Pennsylvania with resources and opportunities to promote visibility, understanding, and equality within the LGBT communities and the community at large. We work toward these goals through education, social support, networking, and advocacy.</p>
+			<p>The Pittsburgh Equality Center provides gay, lesbian, bisexual and transgender (LGBT*) individuals, their families and supporters in Western Pennsylvania with resources and opportunities to promote visibility, understanding, and equality within the LGBT communities and the community at large. We work toward these goals through education, social support, networking, and advocacy.<br><br><br><br></p>
 	</div>
 </div>
