kc fixing margins

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -33,8 +33,8 @@
 		<!-- Angular views for this, they can link to pages that change the view -->
 		<!-- Navigation bar links should actually be photos -->
 		<!-- Button for resources should not be a view, it should open a menu on hover -->
-		<nav class="navbar navbar-default">
-			<div class="container-fluid">
+		<nav class="navbar navbar-default" style="margin-bottom:0px">
+			<!-- <div class="container-fluid"> -->
 				<div class="navbar-header">
 					<a class="navbar-brand" href="/">PinkPages</a>
 				</div>
@@ -50,7 +50,7 @@
 					        </ul>
 					</li>
 				</ul>
-			</div>
+			<!-- </div> -->
 		</nav>
 
 		<div ng-view class="content">
