--- a/public/views/maps.html
+++ b/public/views/maps.html
@@ -1,7 +1,7 @@
 <!-- maps.html -->
 <!-- embedded map and list of resources wil go here -->
 
-<div class="container">
+<div class="container" style="margin-top: 50px">
     <div class="row">
         <div class="col-sm-8">    <!-- map goes here -->
             <div id="map"></div>
