--- a/public/views/main.html
+++ b/public/views/main.html
@@ -9,7 +9,7 @@
       <li data-target="#myCarousel" data-slide-to="2"></li>
   </ol>
   <div class="carousel-inner" role="listbox">
-      <div class="item active">
+      <div class="item active carouselPic">
         	<img class="first-slide" src="http://www.monaco-pittsburgh.com/images/1700-960/lad-dt-086-4bff748c.jpg" alt="First slide">
        		<div class="container">
           		<div class="carousel-caption">
@@ -19,8 +19,8 @@
           		</div>
         		</div>
       </div>
-      <div class="item">
-        	<img class="second-slide" src="http://www.target-10.com/wp-content/uploads/2016/07/Queer-1-1024x1024.png" alt="Second slide">
+      <div class="item carouselPic">
+        	<img class="second-slide" src="http://16411-presscdn-0-65.pagely.netdna-cdn.com/wp-content/uploads/2016/06/full-list-gay-pride-2015-europe-main.jpg" alt="Second slide">
         		<div class="container">
           		<div class="carousel-caption">
             			<h1>Another example headline.</h1>
@@ -29,8 +29,8 @@
           		</div>
         		</div>
       </div>
-      <div class="item">
-        	<img class="third-slide" src="https://ibhuluimcom-a.akamaihd.net/ib.huluim.com/show/428?region=US&size=952x536" alt="Third slide">
+      <div class="item carouselPic">
+        	<img class="third-slide" src="http://wp.production.patheos.com/blogs/formerlyfundie/files/2016/05/AdobeStock_59811034.jpeg" alt="Third slide">
         		<div class="container">
           		<div class="carousel-caption">
             			<h1>One more for good measure.</h1>
@@ -50,7 +50,7 @@
       <span class="sr-only">Next</span>
     </a>
   </div><!-- /.carousel -->
-<div class="container">
+<div class="container" style="padding-top: 10px">
 		<p>The Pittsburgh Pink Pages is a resouce currated by the Pittsburgh Equalty Center. The Pink Pages allow access to a LGBT database of queer freindly establishments around the city. From therapist to bars The Pink Pages have anything that someone could be looking for in the LGBT community. </p>
 		<p>The Pittsburgh Equality Center provides gay, lesbian, bisexual and transgender (LGBT*) individuals, their families and supporters in Western Pennsylvania with resources and opportunities to promote visibility, understanding, and equality within the LGBT communities and the community at large. We work toward these goals through education, social support, networking, and advocacy.<br><br><br><br></p>
 </div>
