--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,20 @@
 }
 
 .customStyle{
-	background-color: #F6E0ED;
+	background-color: #FFC7E8;
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
+}
+
+#myCarousel{
+	display: inline-block;
+	width: 100%;
+}
+
+.carouselPic{
+	height:400px;
+}
+
+.carousel-inner img {
+	margin: auto;
 }
