--- a/public/views/index.html
+++ b/public/views/index.html
@@ -33,7 +33,7 @@
 		<!-- Angular views for this, they can link to pages that change the view -->
 		<!-- Navigation bar links should actually be photos -->
 		<!-- Button for resources should not be a view, it should open a menu on hover -->
-		<nav class="navbar navbar-default" style="margin-bottom:0px">
+		<nav class="navbar navbar-default" style="margin-bottom:0px;">
 			<!-- <div class="container-fluid"> -->
 				<div class="navbar-header">
 					<a class="navbar-brand" href="/">PinkPages</a>
@@ -56,7 +56,7 @@
 		<div ng-view class="content">
 			<!-- The Angular dynamically routed content goes here -->
 		</div>
-      		<div class="navbar navbar-default navbar-fixed-bottom" style="background-color: #646D6D">
+      		<div class="navbar navbar-default navbar-fixed-bottom">
       			<div class="container">
       				<p style="text-align: center; padding-top: 10px">
       					<a class="text-danger" href="/emergency">Click here for emergency resources</a>
