--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,6 +26,9 @@
 	width:80%;
 	height:400px;
 	margin: 0 auto;
+	border:2px solid #9c9b9b;
+	border-radius:5px;
+	box-shadow: 3px 3px 5px #999;
 }
 
 .carousel-inner{
