--- a/public/views/main.html
+++ b/public/views/main.html
@@ -65,14 +65,36 @@
         <div class="col-lg-4">
           <h2>About the Pink Pages</h2>
           <p>The Pink Pages has a rich history behind it- click below to be immersed in history!</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="#about" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <h1>Contact Us</h1>
           <p>Want your business added to the Pink Pages? Problem using the site? Click here to get in contact us with.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a href="#myModal" role="button" class="btn btn-default" data-toggle="modal">Contact Us</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
+      <div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3 id="myModalLabel">We'd Love to Hear From You</h3>
+      </div>
+      <div class="modal-body">
+        <form class="form-horizontal col-sm-12">
+          <div class="form-group"><label>Name</label><input class="form-control required" placeholder="Your name" data-placement="top" data-trigger="manual" data-content="Must be at least 3 characters long, and must only contain letters." type="text"></div>
+          <div class="form-group"><label>Message</label><textarea class="form-control" placeholder="Your message here.." data-placement="top" data-trigger="manual"></textarea></div>
+          <div class="form-group"><label>E-Mail</label><input class="form-control email" placeholder="email@you.com (so that we can contact you)" data-placement="top" data-trigger="manual" data-content="Must be a valid e-mail address (user@gmail.com)" type="text"></div>
+          <div class="form-group"><label>Phone</label><input class="form-control phone" placeholder="999-999-9999" data-placement="top" data-trigger="manual" data-content="Must be a valid phone number (999-999-9999)" type="text"></div>
+          <div class="form-group"><button type="submit" class="btn btn-success pull-right">Send It!</button> <p class="help-block pull-left text-danger hide" id="form-error">&nbsp; The form is not valid. </p></div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
       <!-- START THE FEATURETTES -->
@@ -118,7 +140,7 @@
       <!-- /END THE FEATURETTES -->
 
     <div>
-      <h1>About the Pink Pages</h1>
+      <h1 id="about">About the Pink Pages</h1>
       <hr class="featurette-divider">
       <p>Cardigan beard franzen, twee schlitz pok pok williamsburg la croix prism distillery gentrify kale chips tofu tousled keytar. Fap plaid beard, lo-fi pickled 3 wolf moon vinyl leggings butcher gluten-free humblebrag. Helvetica heirloom hexagon, skateboard aesthetic celiac cray. Photo booth distillery yr, unicorn man braid tote bag beard mustache intelligentsia small batch blog cardigan bushwick. Roof party man braid succulents squid literally. Typewriter church-key yuccie, next level celiac lyft letterpress mumblecore drinking vinegar shoreditch. Pitchfork kale chips locavore succulents, mustache fingerstache raw denim typewriter tilde skateboard tote bag quinoa.</p>
 
